# TideSurf

./: .gitignore  .swp  README.md  Untitled.ipynb  config.json
config/: engine_config.json
cpp/: CMakeLists.txt  dependencies.md
cpp/includes/tidesurf/: app_config.h  dashboard_server.h  file_io.h  float_value.h  globals.h  interval_record.h  iso_date.h  iso_datetime.h  math_util.h  period_breakdown.h  price.h  price_volume_histogram.h  record_table.h  runner.h  server.h  split_share.h  stock.h  string_utils.h  table_from_parquet.h  tidesurf_macros.h  tidesurf_types.h
cpp/src/: dahsboard_server.cpp  iso_date.cpp  iso_datetime.cpp  main.cpp  server.cpp  split_share.cpp
cpp/src/main/: main.cpp
cpp/src/tidesurf/: interval_record.cpp  math_util.cpp  price.cpp  price_volume_histogram.cpp  runner.cpp  stock.cpp  string_utils.cpp
cpp/test/: float_value_test.cpp  price_test.cpp  string_utils_test.cpp
nodejs/dashboard/: package-lock.json
python/: res.json  res2.json  res3.json  sina.json  sina2.json
python/config/: app_config.py
python/data_source/postprocessing/: aicai_conversion.py  history_postprocess_sina.py  pickle_to_parquet.py  postprocessor.py  realtime_parquet_split_adjust.py  realtime_source_data_to_app_source_data.py  realtime_source_data_to_daily_price_breakdown.py  schema.py  stock_list_json_to_parquet.py  utils.py
python/data_source/stock/: easy_quotation_sina_real.py  split_share_juchao.py  split_share_record.py
python/engine/: initialize_data_today_astock_main.py
python/logger/: __init__.py  enums.py  logger.py
python/testing/: test_case.py
python/tests/: 2020-12-21.txt  2020-12-22.txt  aicai_conversion_test.py  count.py  pickle_to_parquet_test.py  price_test.py  realtime_source_data_to_app_source_data_test.py  test_unique.py
python/tests/realtime_parquet_split_adjust_test/: test.py
python/tests/realtime_source_data_to_app_source_data_test/: test.py
python/tests/realtime_source_data_to_daily_price_breakdown_test/: test.py
src/exp/: Untitled.ipynb
tidesurf/data_source/: pickle_to_parquet.py  stock_list_json_to_parquet.py
